# parser_generator

./: .gitignore  CMakeLists.txt  README.md  calc.txt  main.cpp  sample.txt  task2.txt
input_grammar/: GrammaticScheme.g4  GrammaticScheme.interp  GrammaticScheme.tokens  GrammaticSchemeBaseListener.cpp  GrammaticSchemeBaseListener.h  GrammaticSchemeLexer.cpp  GrammaticSchemeLexer.h  GrammaticSchemeLexer.interp  GrammaticSchemeLexer.tokens  GrammaticSchemeListener.cpp  GrammaticSchemeListener.h  GrammaticSchemeParser.cpp  GrammaticSchemeParser.h
lib/: libantlr4-runtime.so.4.7.2
parser_generator/: base.cpp  grammatic.cpp  grammatic.h  non_term.cpp  term.cpp  types.h
